# printer_watcher

./: .gitignore  Cargo.toml  README.md  build.rs  errors.db.bak
.github/workflows/: rust.yaml
src/: error_logging.rs  fake_printer.rs  logging.rs  main.rs  notifications.rs  utils.rs
src/auth/: bambu_auth.rs  mod.rs
src/camera/: mod.rs  shader.wgsl
src/config/: mod.rs  printer_config.rs  printer_id.rs
src/conn_manager/: conn_bambu.rs  helpers.rs  mod.rs  worker_message.rs
src/conn_manager/conn_bambu/: bambu_listener.rs  bambu_proto.rs  errors.rs  message.rs  mod.rs  parse.rs  streaming.rs
src/conn_manager/conn_klipper/: klipper_types.rs  mod.rs  mod_prev.rs
src/conn_manager/conn_octoprint/: mod.rs  octo_commands.rs  octo_types.rs
src/conn_manager/conn_prusa/: mod.rs  prusa_cloud.rs  prusa_local.rs  prusa_local_types.rs
src/error_logging/: error_db.rs  mod.rs
src/profiles/: mod.rs  profiles_db.rs
src/status/: bambu_status.rs  bambu_status2.rs  mod.rs
src/streaming/: gstreamer_bambu.rs  mod.rs  rtsp.rs  rtsp_prev.rs
src/streaming/bambu/: bambu_img.rs  mod.rs
src/ui/: ams.rs  app.rs  dashboard.rs  icons.rs  launch_error.rs  message.rs  mod.rs  model.rs  options.rs  printer_header.rs  printer_widget.rs  quick_view.rs  ui_types.rs  ui_utils.rs  widget_bambu.rs  widget_bambu_v2.rs  widget_klipper.rs  widget_octo.rs  widget_prusa.rs
src/ui/video_player/: mod.rs  test_player.rs  types.rs
