[package]
name = "printer_watcher"
version = "0.1.0"
edition = "2021"

[build-dependencies]
dotenvy = "0.15.0"
anyhow = "1"
# winresource = "0.1.17"

[dependencies]
anyhow = "1.0.83"
dotenvy = "0.15.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }
serde_json = "1.0.117"
futures = { version = "0.3.30", default-features = false }
serde_yaml = "0.9.34"

nanoid = "0.4.0"
byteorder = "1.5.0"
bitreader = "0.3.8"
paste = "1.0"
url = "2.5"
borsh = { version = "1.5.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
cocoon = "0.4.1"
dashmap = "6.0.1"

# tokio-tungstenite = { version = "0.23.1", features = [
#     "rustls",
#     "tokio-rustls",
#     "rustls-native-certs",
#     "rustls-tls-native-roots",
# ] }
# async-stream = "0.3.5"

rumqttc = { version = "0.24.0", default-features = false, features = [
    # "use-native-tls",
    "use-rustls",
] }
rustls-native-certs = "0.7.0"
# parking_lot = "0.12.2"
reqwest = { version = "0.12.4", features = [
    "rustls-tls",
    # "rustls-tls-native-roots",
    "json",
    "blocking",
] }
rustls-pemfile = "2.1.2"
# rustls = "0.22.4"
cookie = "0.18.1"
rand = "0.8.5"
base64 = "0.22.1"
regex = "1.10.4"
# strum = { version = "0.26.2", features = ["derive"] }

retina = "0.4.8"

# notify-rust = { version = "4.11.0", features = ["async"] }

egui = "0.28.1"
eframe = { version = "0.28.1", features = ["persistence"] }
egui_extras = { version = "0.28.1", features = [
    "file",
    "image",
    "svg",
    "http",
] }
egui-phosphor = { version = "0.5.0", features = ["fill"] }
ffmpeg-next = "7.0.2"
image = { version = "0.25.1", features = ["jpeg", "png", "pnm"] }
pretty-hex = "0.4.1"
bytes = "1.6.0"
h264-reader = "0.7.0"
atomic = "0.5.3"

# iced = { version = "0.12.1", features = ["advanced", "lazy", "image"] }
# iced_winit = "0.12.2"
# iced_wgpu = "0.12.1"
# iced_aw = { version = "0.9.3", default-features = false, features = [
#     "tabs",
# "grid",
# ] }

[patch.crates-io]

egui-phosphor = { git = "https://github.com/crumblingstatue/egui-phosphor", branch = "egui-0.28" }
